# self-adj-dice

./: README.md  pyproject.toml
sadice/: __init__.py  loss.py
tests/: test_loss.py
