[tool.poetry]
name = "sadice"
version = "0.1.0"
description = "Self-adjusting Dice Loss implementation"
authors = ["Ivan Fursov <fursovia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "^1.0.0"

[tool.poetry.dev-dependencies]
numpy = "^1.19.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
